bundle/manifests/vg-manager-network-policy_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/name: vg-manager-network-policy
    app.kubernetes.io/part-of: lvms-provisioner
  name: vg-manager-network-policy
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vg-manager
      app.kubernetes.io/name: vg-manager
  policyTypes:
  - Ingress
  - Egress
